Refactoring to bring inline with more recent appliations
